--- a/sass/components/_general.scss
+++ b/sass/components/_general.scss
@@ -14,6 +14,12 @@ body {
     font-family: $mainFont;
     font-style: normal;       
 }
+@media(min-width: 800px) {
+    body {
+        background-color: aqua;
+    }
+}
+
 img{
     
     display: block;
