--- a/sass/components/_general.scss
+++ b/sass/components/_general.scss
@@ -14,11 +14,11 @@ body {
     font-family: $mainFont;
     font-style: normal;       
 }
-@media(min-width: 800px) {
-    body {
-        background-color: aqua;
-    }
-}
+// @media(min-width: 800px) {
+//     body {
+//         background-color: aqua;
+//     }
+// }
 
 img{
     
@@ -31,9 +31,23 @@ img{
     margin: 0;
     margin-left: auto;
     margin-right: auto;
-    width: 1200px;
+    // width: 1200px;
     padding: 0 15px;
     justify-content:space-between;
+
+    @media screen and (min-width: 480px) {
+        width: 450px;
+        outline: 2px solid tomato;
+    }
+    @media screen and (min-width: 768px) {
+        width: 738px;
+        outline: 2px solid blue;
+    }
+    @media screen and (min-width: 1140px) {
+        width: 1200px;
+        outline: 2px solid green;
+
+    }
    
 }
 
