--- a/sass/components/_index_section_4.scss
+++ b/sass/components/_index_section_4.scss
@@ -18,6 +18,19 @@
 
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
+    @media screen and (min-width: 480px) {
+        height: 622px;
+     
+    }
+    @media screen and (min-width: 768px) {
+        height: 536px;
+ 
+    }
+    @media screen and (min-width: 1140px) {
+        height: 428px;
+
+
+    }
 }
 
 .team-name {
@@ -43,6 +56,19 @@
     width: 270px;
     justify-content:space-between;
     padding: 0;
+    @media screen and (min-width: 480px) {
+        width: 450px;
+        outline: 2px solid tomato;
+    }
+    @media screen and (min-width: 768px) {
+        width: 354px;
+        outline: 2px solid blue;
+    }
+    @media screen and (min-width: 1140px) {
+        width: 270px;
+        outline: 2px solid green;
+
+    }
 }
 
 .center-network {
