--- a/css/main.css
+++ b/css/main.css
@@ -358,6 +358,39 @@ body {
   font-style: normal;
 }
 
+.button-menu {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+}
+
+.button-menu .icon-close {
+  display: none;
+}
+
+.button-menu.is-open .icon-close {
+  display: block;
+}
+
+.button-menu.is-open .icon-menu {
+  display: none;
+}
+
+.menu-container {
+  position: absolute;
+  top: 100%;
+  background-color: palegoldenrod;
+  padding: 20px;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  font-size: 20px;
+}
+
 img {
   display: block;
   max-width: 100%;
@@ -365,6 +398,7 @@ img {
 }
 
 .container {
+  position: relative;
   margin: 0;
   margin-left: auto;
   margin-right: auto;
