--- a/css/main.css
+++ b/css/main.css
@@ -358,39 +358,6 @@ body {
   font-style: normal;
 }
 
-.button-menu {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  margin: 0;
-  padding: 0;
-  border: none;
-  background-color: transparent;
-}
-
-.button-menu .icon-close {
-  display: none;
-}
-
-.button-menu.is-open .icon-close {
-  display: block;
-}
-
-.button-menu.is-open .icon-menu {
-  display: none;
-}
-
-.menu-container {
-  position: absolute;
-  top: 100%;
-  background-color: palegoldenrod;
-  padding: 20px;
-  left: 0;
-  width: 100%;
-  text-align: center;
-  font-size: 20px;
-}
-
 img {
   display: block;
   max-width: 100%;
@@ -398,7 +365,6 @@ img {
 }
 
 .container {
-  position: relative;
   margin: 0;
   margin-left: auto;
   margin-right: auto;
@@ -444,6 +410,7 @@ img {
 
 /********************** оформление текста шапки и подвала***********************/
 .main-nav {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -453,6 +420,53 @@ img {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
+}
+
+.button-menu {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+}
+
+.button-menu .icon-close {
+  display: none;
+}
+
+.button-menu.is-open .icon-close {
+  display: block;
+}
+
+.button-menu.is-open .icon-menu {
+  display: none;
+}
+
+.button-menu:hover .icon-close {
+  fill: #2196F3;
+}
+
+.button-menu:hover .icon-menu {
+  fill: #2196F3;
+}
+
+.menu-container {
+  display: none;
+  position: absolute;
+  top: 100%;
+  background-color: #ffffff;
+  padding: 20px;
+  left: 0;
+  width: 100%;
+  height: 453px;
+  text-align: center;
+  font-size: 20px;
+}
+
+.menu-container.is-open {
+  display: block;
 }
 
 .webstudio {
