--- a/sass/components/_page_header.scss
+++ b/sass/components/_page_header.scss
@@ -1,9 +1,47 @@
 /********************** оформление текста шапки и подвала***********************/
 
 .main-nav {
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: flex-start;
+}
+.button-menu{
+    display: inline-flex;
+    margin: 0;
+    padding: 0;
+    border: none;
+    background-color: transparent;
+}
+.button-menu .icon-close{
+    display: none;
+}
+.button-menu.is-open .icon-close{
+    display: block;
+}
+.button-menu.is-open .icon-menu{
+    display: none;
+}
+.button-menu:hover .icon-close{
+    fill: $accent-cl;
+}
+.button-menu:hover .icon-menu{
+    fill: $accent-cl;
+}
+.menu-container{
+    display: none;
+    position: absolute;
+    top: 100%;
+    background-color: $white;
+    padding: 20px;
+    left: 0;
+    width: 100%;
+    height: 453px;
+    text-align: center;
+    font-size: 20px;
+    &.is-open{
+        display: block;
+    }
 }
 
 .webstudio {
