--- a/css/main.css
+++ b/css/main.css
@@ -365,6 +365,9 @@ img {
 }
 
 .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   margin: 0;
   margin-left: auto;
   margin-right: auto;
@@ -374,21 +377,21 @@ img {
           justify-content: space-between;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 450px) {
   .container {
     width: 450px;
     outline: 2px solid tomato;
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 738px) {
   .container {
     width: 738px;
     outline: 2px solid blue;
   }
 }
 
-@media screen and (min-width: 1140px) {
+@media screen and (min-width: 1200px) {
   .container {
     width: 1200px;
     outline: 2px solid green;
@@ -417,9 +420,9 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .button-menu {
@@ -430,6 +433,12 @@ img {
   padding: 0;
   border: none;
   background-color: transparent;
+}
+
+@media screen and (min-width: 738px) {
+  .button-menu {
+    display: none;
+  }
 }
 
 .button-menu .icon-close {
@@ -453,20 +462,49 @@ img {
 }
 
 .menu-container {
-  display: none;
-  position: absolute;
-  top: 100%;
+  padding: 0px;
   background-color: #ffffff;
-  padding: 20px;
-  left: 0;
   width: 100%;
-  height: 453px;
   text-align: center;
   font-size: 20px;
 }
 
-.menu-container.is-open {
-  display: block;
+@media screen and (max-width: 737px) {
+  .menu-container {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+  }
+  .menu-container.is-open {
+    display: block;
+  }
+}
+
+@media screen and (min-width: 738px) {
+  .menu-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+  }
+}
+
+.navigation {
+  outline: 1px solid orange;
+  margin: 0;
+  padding: 0;
+}
+
+.contacts {
+  outline: 1px solid antiquewhite;
+  margin: 0;
+  padding: 0;
 }
 
 .webstudio {
@@ -542,11 +580,20 @@ img {
   list-style: none;
 }
 
-.site-nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-left: 93px;
+@media screen and (max-width: 1200px) {
+  .site-nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-left: 93px;
+  }
+}
+
+@media screen and (max-width: 737px) {
+  .site-nav {
+    display: block;
+    margin-left: 0px;
+  }
 }
 
 .accent {
