--- a/sass/components/_general.scss
+++ b/sass/components/_general.scss
@@ -28,7 +28,7 @@ img{
 }
 
 .container {
-    
+    display: flex;
     margin: 0;
     margin-left: auto;
     margin-right: auto;
@@ -36,15 +36,15 @@ img{
     padding: 0 15px;
     justify-content:space-between;
 
-    @media screen and (min-width: 480px) {
+    @media screen and (min-width: 450px) {
         width: 450px;
         outline: 2px solid tomato;
     }
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 738px) {
         width: 738px;
         outline: 2px solid blue;
     }
-    @media screen and (min-width: 1140px) {
+    @media screen and (min-width: 1200px) {
         width: 1200px;
         outline: 2px solid green;
 
