--- a/css/main.css
+++ b/css/main.css
@@ -432,6 +432,10 @@ img {
   margin: 0;
   padding: 0;
   border: none;
+  height: 60px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-color: transparent;
 }
 
@@ -465,11 +469,12 @@ img {
   padding: 0px;
   background-color: #ffffff;
   width: 100%;
+  height: 453px;
   text-align: center;
   font-size: 20px;
 }
 
-@media screen and (max-width: 737px) {
+@media screen and (max-width: 738px) {
   .menu-container {
     display: none;
     position: absolute;
@@ -499,15 +504,21 @@ img {
   outline: 1px solid orange;
   margin: 0;
   padding: 0;
+  padding-top: 60px;
 }
 
 .contacts {
   outline: 1px solid antiquewhite;
   margin: 0;
   padding: 0;
+  padding-top: 60px;
+  color: #757575;
 }
 
 .webstudio {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
   font-family: Raleway;
   font-weight: 700;
   font-style: normal;
@@ -516,6 +527,9 @@ img {
   letter-spacing: 0.03em;
   text-decoration: none;
   /* Отменяем подчеркивание у ссылки */
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .webstudio-header {
@@ -523,9 +537,6 @@ img {
 }
 
 .auth-nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   margin-left: auto;
 }
 
@@ -535,11 +546,38 @@ img {
   display: flex;
   font-style: normal;
   font-weight: 500;
-  font-size: 14px;
   line-height: 1.143;
   letter-spacing: 0.02em;
   color: inherit;
   text-decoration: none;
+}
+
+@media screen and (max-width: 450px) {
+  .auth-nav .link {
+    padding-bottom: 16px;
+    font-size: 18px;
+  }
+}
+
+@media screen and (min-width: 738px) {
+  .auth-nav .link {
+    padding-top: 0px;
+    font-size: 14px;
+  }
+}
+
+@media screen and (min-width: 738px) {
+  .auth-nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+@media screen and (max-width: 738px) {
+  .auth-nav {
+    display: inline-block;
+  }
 }
 
 .link:hover,
@@ -554,12 +592,25 @@ img {
 
 .link.current::after {
   position: relative;
-  top: 32px;
   content: "";
   display: block;
   height: 4px;
   background: #2196F3;
   border-radius: 2px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media screen and (min-width: 738px) {
+  .link.current::after {
+    top: 32px;
+  }
+}
+
+@media screen and (max-width: 738px) {
+  .link.current::after {
+    top: 8px;
+  }
 }
 
 .link {
@@ -567,8 +618,16 @@ img {
   text-decoration: none;
 }
 
-.auth-nav .item + .item {
-  margin-left: 50px;
+@media screen and (max-width: 450px) {
+  .auth-nav .item + .item {
+    margin-left: 0px;
+  }
+}
+
+@media screen and (min-width: 738px) {
+  .auth-nav .item + .item {
+    margin-left: 50px;
+  }
 }
 
 /*меню -расстановка отступов*/
@@ -580,7 +639,30 @@ img {
   list-style: none;
 }
 
-@media screen and (max-width: 1200px) {
+.site-nav .link {
+  display: block;
+  font-weight: 500;
+  font-style: normal;
+  line-height: 1.143;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+}
+
+@media screen and (max-width: 450px) {
+  .site-nav .link {
+    padding-bottom: 40px;
+    font-size: 18px;
+  }
+}
+
+@media screen and (min-width: 738px) {
+  .site-nav .link {
+    padding-top: 32px;
+    font-size: 14px;
+  }
+}
+
+@media screen and (min-width: 738px) {
   .site-nav {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -589,9 +671,9 @@ img {
   }
 }
 
-@media screen and (max-width: 737px) {
+@media screen and (max-width: 738px) {
   .site-nav {
-    display: block;
+    display: inline-block;
     margin-left: 0px;
   }
 }
@@ -617,21 +699,16 @@ img {
           justify-content: center;
 }
 
-.site-nav .link {
-  display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  font-weight: 500;
-  font-style: normal;
-  font-size: 14px;
-  line-height: 1.143;
-  letter-spacing: 0.02em;
-  text-decoration: none;
+@media screen and (max-width: 450px) {
+  .site-nav .item + .item {
+    margin-left: 0px;
+  }
 }
 
-/* ниже код заменяет выше - всем применить отступ кроме первого*/
-.site-nav .item + .item {
-  margin-left: 50px;
+@media screen and (min-width: 738px) {
+  .site-nav .item + .item {
+    margin-left: 50px;
+  }
 }
 
 /* *********************************************************************** */
