--- a/sass/components/_page_header.scss
+++ b/sass/components/_page_header.scss
@@ -11,7 +11,11 @@
     margin: 0;
     padding: 0;
     border: none;
+    height: 60px;
+    align-items: center;
+    // justify-content: space-between;
     background-color: transparent;
+  
     @media screen and (min-width: $tablet){
         display: none;
     }
@@ -36,11 +40,11 @@
     padding: 0px;
     background-color: $white;
     width: 100%;
-    // height: 453px;
+    height: 453px;
     text-align: center;
     font-size: 20px;
 
-    @media screen and (max-width: 737px){
+    @media screen and (max-width: 738px){
         display: none;
         position: absolute;
         top: 100%;
@@ -54,6 +58,7 @@
         justify-content: space-between;
         flex-grow: 1;
     }
+
 }
 
 // .navigation, .contacts{
@@ -64,15 +69,18 @@
     outline: 1px solid orange;
     margin: 0;
     padding: 0;
+    padding-top: 60px;
 }
 .contacts{
     outline: 1px solid antiquewhite;
     margin: 0;
     padding: 0;
+    padding-top: 60px;
+    color: $gray;
 }
 
 .webstudio {
- 
+display: inline-flex;
     font-family: Raleway;
     font-weight: 700;
     font-style: normal;
@@ -80,23 +88,45 @@
     line-height: 1.192;
     letter-spacing: 0.03em;
     text-decoration: none; /* Отменяем подчеркивание у ссылки */  
+    align-items: center;
+    
 }
 .webstudio-header {
     color: $black; 
 }
 
 .auth-nav {
-    display: flex;
+   
     margin-left: auto;
         .link {
         display: flex;
         font-style: normal;
         font-weight: 500;
-        font-size: 14px;
+        
         line-height: 1.143;
         letter-spacing: 0.02em;  
         color: inherit;
         text-decoration: none;
+        @media screen and (max-width:$mobile){
+            padding-bottom: 16px; 
+            font-size: 18px; 
+        }
+    
+        @media screen and (min-width:$tablet){
+            padding-top: 0px;
+            font-size: 14px;
+            
+        }
+    }
+
+
+    @media screen and (min-width:$tablet){
+        display: flex;
+      
+    }
+    @media screen and (max-width:$tablet){
+        display: inline-block;
+       
     }
 }
 
@@ -110,12 +140,24 @@ color: $accent-cl;
 }
 .link.current::after{
     position: relative;
-    top: 32px;
     content: "";
     display: block;
     height: 4px;
+    // width: 61px;
     background: #2196F3;
     border-radius: 2px;
+    margin-left: auto;
+    margin-right: auto;
+    
+
+    @media screen and (min-width:$tablet){
+        top: 32px;
+    }
+    @media screen and (max-width:$tablet){
+        top: 8px;
+    }
+    
+
 }
 
 .link {
@@ -124,7 +166,17 @@ color: $accent-cl;
 }
 
 .auth-nav .item +.item {
-    margin-left: 50px;
+ 
+
+    @media screen and (max-width:$mobile){
+        margin-left: 0px;
+       
+    }
+
+    @media screen and (min-width:$tablet){
+        margin-left: 50px;
+        
+    }
     
 }
 
@@ -139,19 +191,38 @@ color: $accent-cl;
 
 
 .site-nav{
+.link{
+    display: block;
+    // padding-top: 32px;
+    // padding-bottom: 32px;
+    font-weight: 500;
+    font-style: normal;
+    
+    line-height: 1.143;
+    letter-spacing: 0.02em;
+    text-decoration: none;
+    @media screen and (max-width:$mobile){
+        padding-bottom: 40px; 
+        font-size: 18px; 
+    }
 
-    @media screen and (max-width:$desktop){
+    @media screen and (min-width:$tablet){
+        padding-top: 32px;
+        font-size: 14px;
+        
+    }
+ 
+}
+    @media screen and (min-width:$tablet){
         display: flex;
         margin-left: 93px;
     }
-    @media screen and (max-width:737px){
-        display: block;
+    @media screen and (max-width:$tablet){
+        display: inline-block;
         margin-left: 0px;
     }
 
 }
-    
-
 
 .accent{
     color: $accent-cl;
@@ -168,25 +239,24 @@ color: $accent-cl;
 .item .link{
     display: block;
     align-items: center;
+    // background-color: orchid;
     justify-content: center;
-}
-.site-nav .link {
-    display: block;
-    padding-top: 32px;
-    padding-bottom: 32px;
-    font-weight: 500;
-    font-style: normal;
-    font-size: 14px;
-    line-height: 1.143;
-    letter-spacing: 0.02em;
-    text-decoration: none;
- 
+
 }
 
-/* ниже код заменяет выше - всем применить отступ кроме первого*/
 
 .site-nav .item + .item{
-    margin-left: 50px; 
+    @media screen and (max-width:$mobile){
+        margin-left: 0px;     
+    }
+
+    @media screen and (min-width:$tablet){
+        margin-left: 50px;
+        
+    }
+ 
+  
+       
 }
 
 
