--- a/sass/components/_page_header.scss
+++ b/sass/components/_page_header.scss
@@ -181,13 +181,13 @@ color: $accent-cl;
 }
 
 /*меню -расстановка отступов*/
-.list {
-    padding: 0px;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    margin-right: 0;
-    list-style: none;
-}
+// .list {
+//     padding: 0px;
+//     margin-top: 0px;
+//     margin-bottom: 0px;
+//     margin-right: 0;
+//     list-style: none;
+// }
 
 
 .site-nav{
