--- a/sass/components/_general.scss
+++ b/sass/components/_general.scss
@@ -11,14 +11,11 @@ box-sizing: inherit;
 }
 /*Базовое оформление*/
 body {
+    margin: 0;
     font-family: $mainFont;
     font-style: normal;       
 }
-// @media(min-width: 800px) {
-//     body {
-//         background-color: aqua;
-//     }
-// }
+
 
 img{
     
@@ -26,32 +23,6 @@ img{
     max-width: 100%;
     height: auto;
 }
-
-.container {
-    display: flex;
-    margin: 0;
-    margin-left: auto;
-    margin-right: auto;
-    // width: 1200px;
-    padding: 0 15px;
-    justify-content:space-between;
-
-    @media screen and (min-width: 450px) {
-        width: 450px;
-        outline: 2px solid tomato;
-    }
-    @media screen and (min-width: 738px) {
-        width: 738px;
-        outline: 2px solid blue;
-    }
-    @media screen and (min-width: 1200px) {
-        width: 1200px;
-        outline: 2px solid green;
-
-    }
-   
-}
-
 .center-container {
     display: flex;
     list-style: none;
@@ -62,3 +33,63 @@ img{
     display: block;
     text-decoration: none;
 }
+
+.feautures-item, .revews-set{
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.container {
+    padding-left: 15 px;
+    padding-right: 15 px;
+    margin-left: auto;
+    margin-right: auto;
+
+
+    // display: flex;
+    // margin: 0;
+ 
+    // // width: 1200px;
+    // padding: 0 15px;
+    // justify-content:space-between;
+
+    @media screen and (max-width: 450px) {
+        width: 450px;
+        outline: 2px solid sienna;
+    }
+    @media screen and (min-width: 450px) {
+        width: 450px;
+        outline: 2px solid sienna;
+    }
+    @media screen and (min-width: 738px) {
+        width: 738px;
+        outline: 2px solid blue;
+    }
+    // @media screen and (min-width: 1200px) {
+    //     width: 1200px;
+    //     outline: 2px solid green;
+
+    // }
+   
+}
+
+.section{
+    padding-top: 24px;
+    padding-bottom: 24px;
+}
+section.title {
+    margin-top: 0;
+    margin-bottom: 24px;
+}
+.page-header{
+    border-bottom: 2px solid black;
+}
+
+.page-header .nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    min-height: 80px;
+}
+
