--- a/sass/components/_general.scss
+++ b/sass/components/_general.scss
@@ -66,11 +66,11 @@ img{
         width: 738px;
         outline: 2px solid blue;
     }
-    // @media screen and (min-width: 1200px) {
-    //     width: 1200px;
-    //     outline: 2px solid green;
+    @media screen and (min-width: 1200px) {
+        width: 1200px;
+        outline: 2px solid green;
 
-    // }
+    }
    
 }
 
