--- a/css/main.css
+++ b/css/main.css
@@ -412,6 +412,13 @@ img {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+    outline: 2px solid green;
+  }
+}
+
 .section {
   padding-top: 24px;
   padding-bottom: 24px;
