--- a/sass/components/_general.scss
+++ b/sass/components/_general.scss
@@ -54,10 +54,10 @@ img{
     // padding: 0 15px;
     // justify-content:space-between;
 
-    @media screen and (max-width: 450px) {
-        width: 450px;
-        outline: 2px solid sienna;
-    }
+    // @media screen and (max-width: 450px) {
+    //     width: 450px;
+    //     outline: 2px solid sienna;
+    // }
     @media screen and (min-width: 450px) {
         width: 450px;
         outline: 2px solid sienna;
