--- a/css/main.css
+++ b/css/main.css
@@ -1649,12 +1649,45 @@ section.title {
   margin: 0;
 }
 
+@media screen and (min-width: 738px) {
+  .features-set {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin: -5px;
+  }
+}
+
 .features-item {
   text-align: center;
   padding-top: 20px;
   padding-bottom: 20px;
   color: #ffffff;
   font-size: 32px;
+}
+
+@media screen and (min-width: 738px) {
+  .features-item {
+    -ms-flex-preferred-size: calc((100% - 2 * 10px)/2);
+        flex-basis: calc((100% - 2 * 10px)/2);
+    margin: 5px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .features-item {
+    -ms-flex-preferred-size: calc((100% - 6* 10px)/3);
+        flex-basis: calc((100% - 6* 10px)/3);
+    margin: 10px;
+  }
+}
+
+@media screen and (max-width: 737px) {
+  .features-item:not(:last-child) {
+    margin-bottom: 20px;
+  }
 }
 
 .features-item:nth-child(1) {
@@ -1679,6 +1712,12 @@ section.title {
 
 .features-item:nth-child(6) {
   background-color: #009688;
+}
+
+@media screen and (max-width: 737px) {
+  .reviews {
+    display: none;
+  }
 }
 
 .reviews-item {
