--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,5 +1,10 @@
 .features-set{
     @extend %list;
+    @media screen and (min-width: $tablet) {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -5px;
+    }
     }
     
     .features-item{
@@ -8,7 +13,24 @@
         padding-bottom: 20px;
         color: $white;
         font-size: 32px;
+        @media screen and (min-width: $tablet) {
+            
+            flex-basis: calc((100% - 2 * 10px)/2);
+            margin: 5px;
+            }
+        @media screen and (min-width: $desktop) {
+            flex-basis: calc((100% - 6* 10px)/3);
+            margin: 10px;
+            }
+        @media screen and (max-width: 737px) {
+
+            &:not(:last-child){
+                margin-bottom: 20px;
+            }
     }
+}
+   
+
     
     $colors: "#F44336","#3f51b5","#4CAF50","#00BCD4","#E91E63","#009688";
     @include colorize($colors,".features-item");
