--- a/css/main.css
+++ b/css/main.css
@@ -1720,12 +1720,24 @@ section.title {
   }
 }
 
+.reviews-set {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
 .reviews-item {
   text-align: center;
-  padding-top: 40px;
-  padding-bottom: 20px;
+  padding: 40px;
   color: #ffffff;
   font-size: 48px;
+  width: 33.33333%;
+}
+
+@media screen and (min-width: 1200px) {
+  .reviews-item {
+    font-size: 64px;
+  }
 }
 
 .reviews-item:nth-child(1) {
