--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -5,6 +5,10 @@
     flex-wrap: wrap;
     margin: -5px;
     }
+    @media screen and (min-width: $desktop) {
+  
+        margin: -10px;
+        }
     }
     
     .features-item{
