--- a/sass/components/_page_header.scss
+++ b/sass/components/_page_header.scss
@@ -1,11 +1,11 @@
 /********************** оформление текста шапки и подвала***********************/
 
-.main-nav {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
+// .main-nav {
+//     position: relative;
+//     display: flex;
+//     align-items: center;
+//     justify-content: space-between;
+// }
 .button-menu{
     display: inline-flex;
     margin: 0;
@@ -36,15 +36,15 @@
     fill: $accent-cl;
 }
 .menu-container{
-   
+    position: absolute;
     padding: 0px;
     background-color: $white;
     width: 100%;
-    height: 453px;
+    height: 393px;
     text-align: center;
     font-size: 20px;
 
-    @media screen and (max-width: 738px){
+    @media screen and (max-width: 737px){
         display: none;
         position: absolute;
         top: 100%;
@@ -69,7 +69,7 @@
     outline: 1px solid orange;
     margin: 0;
     padding: 0;
-    padding-top: 60px;
+    padding-bottom: 60px;
 }
 .contacts{
     outline: 1px solid antiquewhite;
@@ -80,7 +80,8 @@
 }
 
 .webstudio {
-display: inline-flex;
+    
+    display: inline-flex;
     font-family: Raleway;
     font-weight: 700;
     font-style: normal;
@@ -96,7 +97,11 @@ display: inline-flex;
 }
 
 .auth-nav {
-   
+    @extend %list;
+    @media screen and (min-width:737px){
+        padding-top: 60px;
+    }
+    
     margin-left: auto;
         .link {
         display: flex;
@@ -107,8 +112,9 @@ display: inline-flex;
         letter-spacing: 0.02em;  
         color: inherit;
         text-decoration: none;
-        @media screen and (max-width:$mobile){
-            padding-bottom: 16px; 
+        @media screen and (max-width:737px){
+            padding-bottom: 16px;
+            
             font-size: 18px; 
         }
     
@@ -191,9 +197,17 @@ color: $accent-cl;
 
 
 .site-nav{
+    @extend %list;
+    @media screen and (min-width:737px){
+      
+        padding-top: 60px; 
+     
+    }
+
+
 .link{
     display: block;
-    // padding-top: 32px;
+    padding-top: 0px;
     // padding-bottom: 32px;
     font-weight: 500;
     font-style: normal;
@@ -201,7 +215,9 @@ color: $accent-cl;
     line-height: 1.143;
     letter-spacing: 0.02em;
     text-decoration: none;
-    @media screen and (max-width:$mobile){
+
+    @media screen and (max-width:737px){
+      
         padding-bottom: 40px; 
         font-size: 18px; 
     }
