--- a/css/main.css
+++ b/css/main.css
@@ -437,7 +437,7 @@ section.title {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  min-height: 80px;
+  min-height: 60px;
 }
 
 /********************** оформление текста шапки и подвала***********************/
@@ -452,6 +452,9 @@ section.title {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   background-color: transparent;
 }
 
@@ -482,24 +485,24 @@ section.title {
 }
 
 .menu-container {
-  position: absolute;
   padding: 0px;
   background-color: #ffffff;
-  width: 100%;
-  height: 453px;
   text-align: center;
-  font-size: 20px;
+  font-size: 18px;
+}
+
+.menu-container.is-open {
+  display: block;
 }
 
 @media screen and (max-width: 737px) {
   .menu-container {
     display: none;
+    height: 393px;
     position: absolute;
     top: 100%;
     left: 0;
-  }
-  .menu-container.is-open {
-    display: block;
+    width: 100%;
   }
 }
 
@@ -519,17 +522,15 @@ section.title {
 
 .navigation {
   outline: 1px solid orange;
-  margin: 0;
-  padding: 0;
-  padding-top: 60px;
 }
 
 .contacts {
-  outline: 1px solid antiquewhite;
-  margin: 0;
-  padding: 0;
-  padding-top: 60px;
-  color: #757575;
+  outline: 1px solid green;
+}
+
+.navigation, .contacts {
+  height: 50px;
+  width: 50px;
 }
 
 .webstudio {
@@ -557,44 +558,22 @@ section.title {
   margin-left: auto;
 }
 
+@media screen and (min-width: 737px) {
+  .auth-nav {
+    padding-top: 60px;
+  }
+}
+
 .auth-nav .link {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   font-style: normal;
   font-weight: 500;
-  line-height: 1.143;
+  line-height: 1.17166;
   letter-spacing: 0.02em;
   color: inherit;
   text-decoration: none;
-}
-
-@media screen and (max-width: 737px) {
-  .auth-nav .link {
-    padding-bottom: 16px;
-    font-size: 18px;
-  }
-}
-
-@media screen and (min-width: 738px) {
-  .auth-nav .link {
-    padding-top: 0px;
-    font-size: 14px;
-  }
-}
-
-@media screen and (min-width: 738px) {
-  .auth-nav {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-}
-
-@media screen and (max-width: 738px) {
-  .auth-nav {
-    display: inline-block;
-  }
 }
 
 .link:hover,
@@ -608,7 +587,6 @@ section.title {
 }
 
 .link.current::after {
-  position: relative;
   content: "";
   display: block;
   height: 4px;
@@ -618,38 +596,12 @@ section.title {
   margin-right: auto;
 }
 
-@media screen and (min-width: 738px) {
-  .link.current::after {
-    top: 32px;
-  }
+.auth-nav .item + .item {
+  margin-left: 0px;
 }
 
-@media screen and (max-width: 738px) {
-  .link.current::after {
-    top: 8px;
-  }
-}
-
-.link {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media screen and (max-width: 480px) {
-  .auth-nav .item + .item {
-    margin-left: 0px;
-  }
-}
-
-@media screen and (min-width: 738px) {
-  .auth-nav .item + .item {
-    margin-left: 50px;
-  }
-}
-
-/*меню -расстановка отступов*/
-@media screen and (min-width: 737px) {
-  .site-nav {
+@media screen and (max-width: 737px) {
+  .site-nav .item:first-child {
     padding-top: 60px;
   }
 }
@@ -659,39 +611,10 @@ section.title {
   padding-top: 0px;
   font-weight: 500;
   font-style: normal;
-  line-height: 1.143;
+  line-height: 1.17166;
   letter-spacing: 0.02em;
   text-decoration: none;
-}
-
-@media screen and (max-width: 737px) {
-  .site-nav .link {
-    padding-bottom: 40px;
-    font-size: 18px;
-  }
-}
-
-@media screen and (min-width: 738px) {
-  .site-nav .link {
-    padding-top: 32px;
-    font-size: 14px;
-  }
-}
-
-@media screen and (min-width: 738px) {
-  .site-nav {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    margin-left: 93px;
-  }
-}
-
-@media screen and (max-width: 738px) {
-  .site-nav {
-    display: inline-block;
-    margin-left: 0px;
-  }
+  color: inherit;
 }
 
 .accent {
@@ -715,19 +638,10 @@ section.title {
           justify-content: center;
 }
 
-@media screen and (max-width: 480px) {
-  .site-nav .item + .item {
-    margin-left: 0px;
-  }
+.site-nav .item + .item {
+  margin-left: 0px;
 }
 
-@media screen and (min-width: 738px) {
-  .site-nav .item + .item {
-    margin-left: 50px;
-  }
-}
-
-/* *********************************************************************** */
 /************************ ПОДВАЛ ОБОИХ СТРАНИЦ *************************/
 .footer-main {
   margin-top: 94px;
