--- a/sass/components/_page_header.scss
+++ b/sass/components/_page_header.scss
@@ -13,13 +13,15 @@
     border: none;
     height: 60px;
     align-items: center;
-    // justify-content: space-between;
+    justify-content: space-between;
     background-color: transparent;
   
     @media screen and (min-width: $tablet){
         display: none;
     }
 }
+
+
 .button-menu .icon-close{
     display: none;
 }
@@ -35,49 +37,59 @@
 .button-menu:hover .icon-menu{
     fill: $accent-cl;
 }
+
+
+
+
 .menu-container{
-    position: absolute;
+
     padding: 0px;
     background-color: $white;
-    width: 100%;
-    height: 393px;
+    // background-color: transparent;
+    
+    
     text-align: center;
-    font-size: 20px;
+    font-size: 18px;
+    &.is-open{  
+        display: block;
+    }
 
     @media screen and (max-width: 737px){
         display: none;
+        height: 393px;
         position: absolute;
         top: 100%;
         left: 0;
-        &.is-open{
-            display: block;
-        }
+        width: 100%;
+
     }
     @media screen and (min-width: $tablet){
         display: flex;
         justify-content: space-between;
         flex-grow: 1;
+        
     }
 
 }
 
-// .navigation, .contacts{
-
-// }
 .navigation{
     
     outline: 1px solid orange;
-    margin: 0;
-    padding: 0;
-    padding-bottom: 60px;
+    // margin: 0;
+    // padding: 0;
+   
 }
 .contacts{
-    outline: 1px solid antiquewhite;
-    margin: 0;
-    padding: 0;
-    padding-top: 60px;
-    color: $gray;
+    outline: 1px solid green;
+    // margin: 0;
+    // padding: 0;
+    // padding-top: 20px;
+    // color: $gray;
 }
+.navigation, .contacts{
+    height: 50px;
+    width: 50px;
+    }
 
 .webstudio {
     
@@ -108,32 +120,31 @@
         font-style: normal;
         font-weight: 500;
         
-        line-height: 1.143;
+        line-height: 1.17166;
         letter-spacing: 0.02em;  
         color: inherit;
         text-decoration: none;
-        @media screen and (max-width:737px){
-            padding-bottom: 16px;
-            
-            font-size: 18px; 
-        }
+        // @media screen and (max-width:737px){
+        //     padding-bottom: 16px;
+        //     font-size: 18px; 
+        // }
     
-        @media screen and (min-width:$tablet){
-            padding-top: 0px;
-            font-size: 14px;
+        // @media screen and (min-width:$tablet){
+        //     padding-top: 0px;
+        //     font-size: 14px;
             
-        }
+        // }
     }
 
 
-    @media screen and (min-width:$tablet){
-        display: flex;
+    // @media screen and (min-width:$tablet){
+    //     display: flex;
       
-    }
-    @media screen and (max-width:$tablet){
-        display: inline-block;
+    // }
+    // @media screen and (max-width:$tablet){
+    //     display: inline-block;
        
-    }
+    // }
 }
 
 .link:hover,
@@ -145,7 +156,7 @@
 color: $accent-cl;
 }
 .link.current::after{
-    position: relative;
+    // position: relative;
     content: "";
     display: block;
     height: 4px;
@@ -155,95 +166,73 @@ color: $accent-cl;
     margin-left: auto;
     margin-right: auto;
     
-
-    @media screen and (min-width:$tablet){
-        top: 32px;
-    }
-    @media screen and (max-width:$tablet){
-        top: 8px;
-    }
+    // @media screen and (min-width:$tablet){
+    //     top: 32px;
+    // }
+    // @media screen and (max-width:$tablet){
+    //     top: 8px;
+    // }
     
 
 }
 
-.link {
-    color: inherit;
-    text-decoration: none;
-}
+
 
 .auth-nav .item +.item {
  
-
-    @media screen and (max-width:$mobile){
         margin-left: 0px;
-       
-    }
-
-    @media screen and (min-width:$tablet){
-        margin-left: 50px;
-        
-    }
     
 }
-
-/*меню -расстановка отступов*/
-// .list {
-//     padding: 0px;
-//     margin-top: 0px;
-//     margin-bottom: 0px;
-//     margin-right: 0;
-//     list-style: none;
-// }
 
 
 .site-nav{
     @extend %list;
-    @media screen and (min-width:737px){
-      
-        padding-top: 60px; 
-     
+    
+    @media screen and (max-width:737px){
+        .item:first-child{
+            padding-top: 60px;
+        }
     }
-
 
 .link{
     display: block;
     padding-top: 0px;
-    // padding-bottom: 32px;
+
     font-weight: 500;
     font-style: normal;
     
-    line-height: 1.143;
+    line-height: 1.17166;
     letter-spacing: 0.02em;
     text-decoration: none;
-
-    @media screen and (max-width:737px){
+    color: inherit;
+  
+    // @media screen and (max-width:737px){
       
-        padding-bottom: 40px; 
-        font-size: 18px; 
-    }
+    //     padding-bottom: 40px; 
+    //     font-size: 18px; 
+    // }
 
-    @media screen and (min-width:$tablet){
-        padding-top: 32px;
-        font-size: 14px;
+    // @media screen and (min-width:$tablet){
+    //     padding-top: 32px;
+    //     font-size: 14px;
         
-    }
+    // }
  
 }
-    @media screen and (min-width:$tablet){
-        display: flex;
-        margin-left: 93px;
-    }
-    @media screen and (max-width:$tablet){
-        display: inline-block;
-        margin-left: 0px;
-    }
+    // @media screen and (min-width:$tablet){
+    //     display: flex;
+    //     margin-left: 93px;
+    // }
+    // @media screen and (max-width:$tablet){
+    //     display: inline-block;
+    //     margin-left: 0px;
+    // }
 
 }
 
 .accent{
     color: $accent-cl;
 }
-
 
 .auth-icon-svg{
 
@@ -257,23 +246,10 @@ color: $accent-cl;
     align-items: center;
     // background-color: orchid;
     justify-content: center;
-
+    
 }
-
 
 .site-nav .item + .item{
-    @media screen and (max-width:$mobile){
-        margin-left: 0px;     
-    }
-
-    @media screen and (min-width:$tablet){
-        margin-left: 50px;
-        
-    }
- 
-  
-       
+    margin-left: 0px;         
 }
 
-
-/* *********************************************************************** */
