--- a/sass/components/_page_header.scss
+++ b/sass/components/_page_header.scss
@@ -73,13 +73,14 @@
 }
 
 .navigation{
-    
+    display: inline-flex;
     outline: 1px solid orange;
     // margin: 0;
     // padding: 0;
    
 }
 .contacts{
+    display: inline-flex;
     outline: 1px solid green;
     // margin: 0;
     // padding: 0;
@@ -181,6 +182,7 @@ color: $accent-cl;
 .auth-nav .item +.item {
  
         margin-left: 0px;
+        display: inline-flex;
     
 }
 
