--- a/sass/components/_page_header.scss
+++ b/sass/components/_page_header.scss
@@ -1,11 +1,6 @@
 /********************** оформление текста шапки и подвала***********************/
 
-// .main-nav {
-//     position: relative;
-//     display: flex;
-//     align-items: center;
-//     justify-content: space-between;
-// }
+
 .button-menu{
     display: inline-flex;
     margin: 0;
@@ -38,22 +33,15 @@
     fill: $accent-cl;
 }
 
-
-
-
 .menu-container{
 
     padding: 0px;
-    background-color: $white;
-    // background-color: transparent;
-    
-    
+    background-color: rgb(187, 187, 187);
     text-align: center;
     font-size: 18px;
     &.is-open{  
         display: block;
     }
-
     @media screen and (max-width: 737px){
         display: none;
         height: 393px;
@@ -69,28 +57,16 @@
         flex-grow: 1;
         
     }
-
 }
-
 .navigation{
-    display: inline-flex;
     outline: 1px solid orange;
-    // margin: 0;
-    // padding: 0;
-   
+  
 }
 .contacts{
-    display: inline-flex;
+
     outline: 1px solid green;
-    // margin: 0;
-    // padding: 0;
-    // padding-top: 20px;
-    // color: $gray;
+    color: $gray;
 }
-.navigation, .contacts{
-    height: 50px;
-    width: 50px;
-    }
 
 .webstudio {
     
@@ -111,13 +87,27 @@
 
 .auth-nav {
     @extend %list;
-    @media screen and (min-width:737px){
-        padding-top: 60px;
+    @media screen and (min-width: $tablet){
+        .item{
+            display: inline-flex;
+            align-items: baseline;
+        }
     }
-    
+    @media screen and (max-width:737px){
+        .item:first-child{
+            padding-top: 20px;
+
+        }
+        .item{
+            display: flex;
+            justify-content: center;
+            padding-bottom: 16px;
+         }
+    }
+
     margin-left: auto;
         .link {
-        display: flex;
+ 
         font-style: normal;
         font-weight: 500;
         
@@ -148,52 +138,31 @@
     // }
 }
 
-.link:hover,
-.link:focus{
-    color:$accent-cl;
-} 
-/* текущая страница - голубого цвета пункт меню*/
-.link.current {
-color: $accent-cl;
-}
-.link.current::after{
-    // position: relative;
-    content: "";
-    display: block;
-    height: 4px;
-    // width: 61px;
-    background: #2196F3;
-    border-radius: 2px;
-    margin-left: auto;
-    margin-right: auto;
+// @media screen and (max-width: 737px){
+
+// }
+// @media screen and (min-width: $tablet){
     
-    // @media screen and (min-width:$tablet){
-    //     top: 32px;
-    // }
-    // @media screen and (max-width:$tablet){
-    //     top: 8px;
-    // }
-    
-
-}
-
-
-
-.auth-nav .item +.item {
- 
-        margin-left: 0px;
-        display: inline-flex;
-    
-}
-
-
+// }
 .site-nav{
     @extend %list;
-    
+
+    @media screen and (min-width: $tablet){
+        .item{
+            display: inline-flex;
+            align-items: baseline;
+        }
+    }
     @media screen and (max-width:737px){
         .item:first-child{
             padding-top: 60px;
+
         }
+        .item{
+            display: flex;
+            justify-content: center;
+            padding-bottom: 40px;
+         }
     }
 
 .link{
@@ -231,6 +200,44 @@ color: $accent-cl;
     // }
 
 }
+
+.link:hover,
+.link:focus{
+    color:$accent-cl;
+} 
+/* текущая страница - голубого цвета пункт меню*/
+.link.current {
+color: $accent-cl;
+}
+.link.current::after{
+    // position: relative;
+    content: "";
+    display: block;
+    height: 4px;
+    // width: 61px;
+    background: #2196F3;
+    border-radius: 2px;
+    margin-left: auto;
+    margin-right: auto;
+    
+    // @media screen and (min-width:$tablet){
+    //     top: 32px;
+    // }
+    // @media screen and (max-width:$tablet){
+    //     top: 8px;
+    // }
+    
+
+}
+
+
+
+// .auth-nav .item +.item {
+//         margin-left: 0px;
+// }
+
+
+
 
 .accent{
     color: $accent-cl;
